# AzureAIAgents

./: 4_generate_data.ipynb  5_evaluate_index.ipynb  README.md  agent_team.py  agent_team_config.yaml  data.jsonl  instance_results.jsonl  preprocess_documents.ipynb  promptflowtest.ipynb  simple_agent.ipynb  user_functions.py
AgentFramework/: SimpleAgent.ipynb
RAG/: 1_preprocess_documents.ipynb  4_generate_data.ipynb  5_evaluate_index.ipynb  combined_results.json  myevalresults.json
RAG/data/processed/files/: 10K-AMZN-02-03-2023.pdf.parquet  10K-AMZN-02-04-2022.pdf.parquet  10K-MSFT-07-27-2023.pdf.parquet  10K-MSFT-07-28-2022.pdf.parquet  10Q-AMZN-07-29-2022.pdf.parquet  10Q-AMZN-08-04-2023.pdf.parquet  10Q-AMZN-10-27-2023.pdf.parquet  10Q-AMZN-10-28-2022.pdf.parquet  10Q-GOOG-04-26-2023.pdf.parquet  10Q-GOOG-07-26-2023.pdf.parquet  10Q-GOOG-10-25-2023.pdf.parquet  (+3 more)
SQL/: 1_SQLDB_upload_data.ipynb  2_LangChain_SQL_Agent.ipynb
SemanticKernel/claims/: PLAN.md  pyproject.toml  requirements.txt
SemanticKernel/claims/docs/: general_insurance_payment_claim_process.bpmn
claims-orchestration/tests/documents/: document_metadata.json
data/processed/files/: 10K-GOOG-01-31-2024.pdf.parquet  10K-GOOG-02-02-2022.pdf.parquet  10K-GOOG-02-03-2023.pdf.parquet  10Q-AMZN-04-28-2023.pdf.parquet  10Q-GOOG-04-27-2022.pdf.parquet  10Q-GOOG-07-27-2022.pdf.parquet  10Q-MSFT-01-25-2022.pdf.parquet  10Q-MSFT-04-25-2023.pdf.parquet  10Q-MSFT-04-26-2022.pdf.parquet  10Q-MSFT-10-24-2023.pdf.parquet  10Q-MSFT-10-25-2022.pdf.parquet
data/processed/validation_data/: validation.jsonl
