[project]
name = "claims-orchestration"
version = "0.1.0"
description = "Magentic orchestration prototype for insurance claim processing"
readme = "PLAN.md"
authors = [
    { name = "Azure AI Agents" }
]
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel>=1.12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pandas>=2.2.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-logging>=0.49b0",
    "opentelemetry-distro>=0.49b0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
index-url = "https://pypi.org/simple"

[tool.uv.pip]
extra-args = []
